--- a/test.ipynb
+++ b/test.ipynb
@@ -13,13 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "####################################################################################################################################################\n",
     "class NODE(object):\n",
     "    ################################################################################################################################################\n",
@@ -48,10 +47,6 @@
     "            usecols = ['time', self.markers_color],                             # Only load the three columns specified.\n",
     "            parse_dates = ['time'] ) \n",
     "        \n",
-    "        # DON'T USE!! markers are switched and smoothing causes error    \n",
-    "        # Processing\n",
-    "        # self.markers = self.markers.rolling(window_length, axis=0).mean()    # Gap filling\n",
-    "        # self.markers = self.markers.ffill(axis=0).bfill(axis=0)              # Smoothing\n",
     "\n",
     "        # Time\n",
     "        date_time = pd.to_datetime( raw_df['time'] , format=datime_format)\n",
@@ -60,20 +55,19 @@
     "        # Markers\n",
     "        markers = [list(map(float, l.replace(']','').replace('[','').replace('\\n','').split(\", \"))) for l in raw_df[self.markers_color].values]  \n",
     "        markers_npy = np.array(markers).reshape(len(time), -1, 3)\n",
+    "        # DON'T Smooth markers. markers can be switched in array and smoothing causes error    \n",
     "\n",
     "        # Center    \n",
     "        center = np.mean(markers_npy, axis=1)         \n",
     "        center = np.nan_to_num(center)\n",
-    "        center = signal.savgol_filter( center, window_length=window_length, polyorder=1, axis=0)            \n",
-    "        \n",
+    "        center = signal.savgol_filter( center, window_length=window_length, polyorder=1, axis=0)     \n",
+    "\n",
     "        # Norm\n",
     "        norm = np.cross( markers_npy[:,1,:] - markers_npy[:,0,:], markers_npy[:,2,:] - markers_npy[:,0,:])\n",
-    "        # norm[ norm[:,2]<0, :] *= -1 \n",
-    "        norm = np.nan_to_num(norm)\n",
-    "        # norm = signal.savgol_filter( norm, window_length=window_length, polyorder=1, axis=0)  \n",
+    "        # norm[ norm[:,2]<0, :] *= -1   # Don't use ! \n",
     "        norm = norm / ( np.reshape(np.linalg.norm(norm, axis=1), (-1,1)) * np.ones((1,3)))\n",
+    "        # DOn't smooth norm \n",
     "\n",
-    "        # Relative movements \n",
     "        if ref_node_data is None:            \n",
     "            return pd.DataFrame({\n",
     "                'time': time,\n",
@@ -81,23 +75,23 @@
     "                'center': list(center), \n",
     "                'norm': list(norm)\n",
     "                })    \n",
-    "                   \n",
+    "\n",
+    "        ############################\n",
+    "        #### Relative Movements ####\n",
+    "\n",
+    "        # Reader center/norm     \n",
     "        N = 10\n",
     "        ref_center = np.tile( np.mean(ref_node_data.center.loc[:N], axis=0), (len(ref_node_data),1) )\n",
     "        ref_norm = np.tile( np.mean(ref_node_data.norm.loc[:N], axis=0), (len(ref_node_data),1) )            \n",
+    "        \n",
+    "        distance_vec = ref_center - center                                                                  # Distance (vector)        \n",
+    "        distance = np.linalg.norm( distance_vec, axis=1)                                                    # Distance\n",
+    "        lat_misalignment = np.sqrt(distance**2 - np.sum(np.multiply( distance_vec, ref_norm), axis=1)**2)   # Lateral Misalignment                   \n",
+    "        ang_misalignment = np.arcsin( np.linalg.norm(np.cross(ref_norm, norm), axis=1) )*180/np.pi          # Angular Misalignment\n",
     "\n",
-    "        distance_vec = ref_center - center\n",
-    "\n",
-    "        # Distance\n",
-    "        distance = np.linalg.norm( distance_vec, axis=1)\n",
+    "        # Smoothing (smooth these params after all calculation)               \n",
     "        distance = signal.savgol_filter( distance, window_length=window_length, polyorder=1, axis=0)                        \n",
-    "\n",
-    "        # Lateral Misalignment\n",
-    "        lat_misalignment = np.sqrt(distance**2 - np.sum(np.multiply( distance_vec, ref_norm), axis=1)**2)           \n",
     "        lat_misalignment = signal.savgol_filter( lat_misalignment, window_length=window_length, polyorder=1, axis=0)        \n",
-    "\n",
-    "        # Angular Misalignment\n",
-    "        ang_misalignment = np.arcsin( np.linalg.norm(np.cross(ref_norm, norm), axis=1) )*180/np.pi\n",
     "        ang_misalignment = signal.savgol_filter( ang_misalignment, window_length=window_length, polyorder=1, axis=0)  \n",
     "\n",
     "        return pd.DataFrame({\n",
@@ -197,8 +191,8 @@
     "        if save:\n",
     "            dataset_file_path = get_dataset_file_path(dataset_name, file_name)\n",
     "            create_folder(dataset_file_path)\n",
-    "            data.to_csv( dataset_file_path, index=False)  \n",
-    "            print(self.file_name, 'is saved.')\n",
+    "            data.to_pickle( dataset_file_path)  \n",
+    "            print(file_name, 'is saved.')\n",
     "\n",
     "        return data\n",
     "####################################################################################################################################################\n",
@@ -216,17 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "dataset_name = 'dataset_04'   \n",
+    "dataset_name = 'dataset_05'   \n",
     "file_name = 'record_' + \"{0:0=2d}\".format(0)\n",
-    " \n",
-    "rfid_info = get_rfid_info(dataset_name)    \n",
-    "sys = SYSTEM(system_info=rfid_info)"
+    " "
    ]
   },
   {
@@ -234,45 +226,107 @@
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "     type markers_color               IDD  port\n0  reader           red              None  None\n1     tag          blue  E0022400028402EB  None\n2     tag         green  E002240002749F45  None",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>markers_color</th>\n      <th>IDD</th>\n      <th>port</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>reader</td>\n      <td>red</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tag</td>\n      <td>blue</td>\n      <td>E0022400028402EB</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>tag</td>\n      <td>green</td>\n      <td>E002240002749F45</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "source": [
-    "data = sys.get_data(dataset_name, file_name)"
+    "file_path = main_directory + '/' + dataset_folder_name +  '/' + dataset_name  + '/calibration_setting/sys_info.txt'\n",
+    "exp_info = pd.read_csv(file_path, delimiter='\\t')\n",
+    "exp_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'tag'"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "exp_info.loc[1, 'type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tags = list()\n",
+    "for idx in exp_info.index:\n",
+    "    node_info = exp_info.loc[idx, exp_info.columns!='type'].to_dict()\n",
+    "    node = NODE( **  )\n",
+    "    if exp_info.loc[idx, 'type'] == 'tag':\n",
+    "        tags.append(node)\n",
+    "    else:\n",
+    "        reader = node\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "idx = 0 \n",
+    "node_info = exp_info.loc[idx, exp_info.columns!='type'].to_dict()\n",
+    "for key,value in node_info.items():\n",
+    "    if value == 'None': node_info.update({key: None})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'markers_color': 'red', 'IDD': None, 'port': None}"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "node_info"
+   ]
   },
   {
    "cell_type": "code",
