--- a/test.ipynb
+++ b/test.ipynb
@@ -201,24 +201,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.io as sio\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "dataset_name = 'dataset_05'   \n",
-    "file_name = 'record_' + \"{0:0=2d}\".format(0)\n",
-    " "
+    "matfolder_file_path = './matdata/'\n",
+    "\n",
+    "for n in range(1):\n",
+    "    file_name = 'record_' + \"{0:0=2d}\".format(n)\n",
+    "    dataset_file_path = get_dataset_file_path(dataset_name, file_name)\n",
+    "    data = pd.read_pickle(dataset_file_path)\n",
+    "\n",
+    "    # sio.savemat( matfolder_file_path + file_name +'.mat', {name: col.values for name, col in data.items()}) "
    ]
   },
   {
@@ -245,11 +253,7 @@
      "execution_count": 28
     }
    ],
-   "source": [
-    "file_path = main_directory + '/' + dataset_folder_name +  '/' + dataset_name  + '/calibration_setting/sys_info.txt'\n",
-    "exp_info = pd.read_csv(file_path, delimiter='\\t')\n",
-    "exp_info"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -265,9 +269,7 @@
      "execution_count": 12
     }
    ],
-   "source": [
-    "exp_info.loc[1, 'type']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -276,16 +278,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "tags = list()\n",
-    "for idx in exp_info.index:\n",
-    "    node_info = exp_info.loc[idx, exp_info.columns!='type'].to_dict()\n",
-    "    node = NODE( **  )\n",
-    "    if exp_info.loc[idx, 'type'] == 'tag':\n",
-    "        tags.append(node)\n",
-    "    else:\n",
-    "        reader = node\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -296,17 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "idx = 0 \n",
-    "node_info = exp_info.loc[idx, exp_info.columns!='type'].to_dict()\n",
-    "for key,value in node_info.items():\n",
-    "    if value == 'None': node_info.update({key: None})"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -325,7 +313,8 @@
     }
    ],
    "source": [
-    "node_info"
+    "import scipy.io as sio\n",
+    "sio.savemat(os.path.join(destination_folder_path,'meta.mat'), df)"
    ]
   },
   {
