--- a/test.ipynb
+++ b/test.ipynb
@@ -238,22 +238,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": []
    },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "     type markers_color               IDD  port\n0  reader           red              None  None\n1     tag          blue  E0022400028402EB  None\n2     tag         green  E002240002749F45  None",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>markers_color</th>\n      <th>IDD</th>\n      <th>port</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>reader</td>\n      <td>red</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tag</td>\n      <td>blue</td>\n      <td>E0022400028402EB</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>tag</td>\n      <td>green</td>\n      <td>E002240002749F45</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 28
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-08-10 14:37:31.500321\n2020-08-10 14:37:34.500321\n"
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "x = datetime.now() \n",
+    "print(x)\n",
+    "x += timedelta(seconds=10)\n",
+    "print(x)\n"
+   ]
   },
   {
    "cell_type": "code",
