--- a/regression_nn.ipynb
+++ b/regression_nn.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -159,7 +159,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Model: \"sequential_4\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nconv1d_9 (Conv1D)            (None, 242, 200)          8200      \n_________________________________________________________________\nconv1d_10 (Conv1D)           (None, 242, 100)          400100    \n_________________________________________________________________\nconv1d_11 (Conv1D)           (None, 242, 50)           50050     \n_________________________________________________________________\nbatch_normalization_4 (Batch (None, 242, 50)           200       \n_________________________________________________________________\nflatten_4 (Flatten)          (None, 12100)             0         \n_________________________________________________________________\ndense_9 (Dense)              (None, 500)               6050500   \n_________________________________________________________________\ndense_10 (Dense)             (None, 400)               200400    \n_________________________________________________________________\ndense_11 (Dense)             (None, 242)               97042     \n=================================================================\nTotal params: 6,806,492\nTrainable params: 6,806,392\nNon-trainable params: 100\n_________________________________________________________________\nNone\n"
+     "text": "Model: \"sequential_6\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nconv1d_12 (Conv1D)           (None, 242, 200)          8200      \n_________________________________________________________________\nconv1d_13 (Conv1D)           (None, 242, 100)          400100    \n_________________________________________________________________\nconv1d_14 (Conv1D)           (None, 242, 50)           50050     \n_________________________________________________________________\nbatch_normalization_5 (Batch (None, 242, 50)           200       \n_________________________________________________________________\nflatten_5 (Flatten)          (None, 12100)             0         \n_________________________________________________________________\ndense_13 (Dense)             (None, 500)               6050500   \n_________________________________________________________________\ndense_14 (Dense)             (None, 400)               200400    \n_________________________________________________________________\ndense_15 (Dense)             (None, 242)               97042     \n=================================================================\nTotal params: 6,806,492\nTrainable params: 6,806,392\nNon-trainable params: 100\n_________________________________________________________________\nNone\n"
     }
    ],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -472,46 +472,32 @@
    "source": [
     "class TCN(object):\n",
     "        ######################################################################################################    \n",
-    "    def __init__(self, input_shape, strides, **params ):\n",
+    "    def __init__(self, input_shape, **params ):\n",
     "        np.random.seed(7)        \n",
     "        self.input_shape = input_shape\n",
-    "        self.strides = strides\n",
     "        self.build_model(**params)\n",
     "        return\n",
     "    ######################################################################################################\n",
-    "    def build_model(self, Nlayers=2, nb_filters=5, Nfeatures=2, activation=None, optimizer='adam', loss='mse' ):  \n",
-    "        i = tf.keras.Input(batch_shape=(None, self.win_size, Nfeatures)) \n",
-    "        if Nlayers>1:\n",
-    "            o = tcn.TCN(nb_filters=nb_filters, return_sequences=True)(i)\n",
-    "            for n in range(Nlayers-2): tcn.TCN(nb_filters=nb_filters, return_sequences=True)(o)    \n",
-    "            o = tcn.TCN(nb_filters=nb_filters, return_sequences=False)(o)\n",
-    "        else:\n",
-    "            o = tcn.TCN(nb_filters=nb_filters, return_sequences=False)(i)     \n",
-    "            \n",
-    "        o = tf.keras.layers.Dense(1, activation=activation)(o)\n",
-    "        self.model = tf.keras.Model(inputs=[i], outputs=[o])\n",
+    "    def build_model(self, activation='norm_relu', optimizer='adam', loss='mean_squared_error', dropout=0): \n",
+    "        i = tf.keras.Input(batch_shape=(None, self.input_shape[0], self.input_shape[1])) \n",
     "        \n",
-    "        self.model.compile(loss='mse', optimizer='adam')\n",
-    "        \n",
-    "        print(self.model.summary())                \n",
-    "        return \n",
+    "        o = tcn.TCN(nb_filters=200, kernel_size=30, activation=activation, dropout_rate=dropout, return_sequences=True)(i)\n",
+    "        o = tcn.TCN(nb_filters=100, kernel_size=20, activation=activation, dropout_rate=dropout, return_sequences=True)(o)    \n",
+    "        o = tcn.TCN(nb_filters=50, kernel_size=10, activation=activation, dropout_rate=dropout, return_sequences=True)(o) \n",
+    "        o = tcn.TCN(nb_filters=1, kernel_size=5, activation=activation, dropout_rate=dropout, return_sequences=True)(o) \n",
+    "  \n",
+    "        # o = tf.keras.layers.BatchNormalization(o)\n",
+    "        # o = tf.keras.layers.Flatten(o)\n",
+    "        # o = tf.keras.layers.Dense(500, activation=activation)(o)\n",
+    "        # o = tf.keras.layers.Dense(400, activation=activation)(o)\n",
+    "        # o = tf.keras.layers.Dense(self.input_shape[0], activation=activation)(o)               \n",
     "\n",
-    "    ######################################################################################################\n",
-    "    def build_model(self, activation='softmax', optimizer='adam', loss='mean_squared_error', dropout=0): \n",
-    "        self.model = Sequential()\n",
-    "        self.model.add(Conv1D( filters=200, kernel_size=20, strides=self.strides, activation=activation, padding='same', input_shape=self.input_shape))\n",
-    "        self.model.add(Conv1D( filters=100, kernel_size=20, strides=self.strides, activation=activation, padding='same'))\n",
-    "        self.model.add(Conv1D( filters=50, kernel_size=10, strides=self.strides, activation=activation, padding='same'))\n",
-    "        self.model.add(BatchNormalization())\n",
-    "        self.model.add(Flatten())\n",
-    "        self.model.add(Dense(500, activation=activation))\n",
-    "        # self.model.add(Dropout(dropout))\n",
-    "        self.model.add(Dense(400, activation=activation))\n",
-    "        self.model.add(Dense(self.input_shape[0]))                     \n",
-    "\n",
+    "        self.model = tf.keras.Model(inputs=[i], outputs=[o])        \n",
     "        self.model.compile(loss=loss, optimizer=optimizer)  \n",
-    "        print(self.model.summary())        \n",
+    "        print(self.model.summary()) \n",
+    "\n",
     "        return \n",
+    "\n",
     "    ######################################################################################################\n",
     "    def train(self, train_data, **params): \n",
     "        history = self.model.fit( train_data.X, train_data.Y, **params) \n",
@@ -529,21 +515,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Model: \"model\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\ninput_1 (InputLayer)         [(None, 242, 2)]          0         \n_________________________________________________________________\ntcn (TCN)                    (None, 242, 200)          13215000  \n_________________________________________________________________\ntcn_1 (TCN)                  (None, 242, 100)          2621300   \n_________________________________________________________________\ntcn_2 (TCN)                  (None, 242, 50)           330650    \n_________________________________________________________________\ntcn_3 (TCN)                  (None, 242, 1)            368       \n=================================================================\nTotal params: 16,167,318\nTrainable params: 16,167,318\nNon-trainable params: 0\n_________________________________________________________________\nNone\n"
+    }
+   ],
+   "source": [
+    "regressor = TCN(\n",
+    "    input_shape = np.shape(train_data.X)[1:],\n",
+    "    activation = 'elu',\n",
+    "    optimizer = tf.keras.optimizers.Adam( learning_rate=0.0001), \n",
+    "    loss = 'mean_squared_error', \n",
+    "    dropout = 0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'regressor' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-e74311293166>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhistory\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'loss'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'regressor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "history = regressor.train(train_data, epochs=200, verbose=1)\n",
+    "plt.plot(history.history['loss'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'test_data_meas' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-de184a22f56b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# data = validation_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_data_meas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# data = test_data_synth\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_data_meas' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# data = validation_data\n",
+    "data = test_data_meas\n",
+    "# data = test_data_synth\n",
+    "\n",
+    "predictions = regressor.predict(data.X)\n",
+    "\n",
+    "for (y_true, y_pred) in zip(data.Y, predictions):\n",
+    "    y_pred = signal.savgol_filter( y_pred, window_length=5, polyorder=1, axis=0)       \n",
+    "    plt.plot(y_true, label='Target')\n",
+    "    plt.plot(y_pred, label='Prediction')\n",
+    "    plt.show()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "regressor = TCN(\n",
-    "    win_size = 20,\n",
-    "    step = 1,\n",
-    "    Nlayers = 1,\n",
-    "    nb_filters=64,\n",
-    "    activation = None, \n",
-    "    optimizer = 'adam', \n",
-    "    loss = 'mse',\n",
-    "    Nfeatures = train_data.X.shape[2]  \n",
-    ")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
